new requirements added

--- a/demo/www/templates/activity.html
+++ b/demo/www/templates/activity.html
@@ -1,15 +1,27 @@
-<ion-view view-title="Activity" style="background: url(img/prototype/sap_app_bg.jpg) center; background-size: cover;">
+<ion-view view-title="Group" style="background: url(img/prototype/sap_app_bg.jpg) center; background-size: cover;">
     <ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in">
-        <div class="card ">
+        <!--<div class="card ">-->
+            <!--<div class="item item-text-wrap">-->
+                <!--<strong>Eric</strong> How are you feel today? "-->
+            <!--</div>-->
+            <!--<div class="list">-->
+                <!--<div class="item range range-positive">-->
+                    <!--<i class="icon ion-ios-rainy-outline"></i>-->
+                    <!--<input type="range" name="volume" min="0" max="100" value="33">-->
+                    <!--<i class="icon ion-ios-sunny-outline"></i>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+        <div class="card">
             <div class="item item-text-wrap">
-                <strong>Eric</strong> How are you feel today? "
+                <strong>Feifei Wang</strong> Shared a video, Join me for Yoga ?
             </div>
-            <div class="list">
-                <div class="item range range-positive">
-                    <i class="icon ion-ios-rainy-outline"></i>
-                    <input type="range" name="volume" min="0" max="100" value="33">
-                    <i class="icon ion-ios-sunny-outline"></i>
-                </div>
+            <div class="card">
+                <ion-item>
+                    <div class="video-container">
+                        <iframe src="https://www.youtube.com/embed/rQaENEaAHqc" frameborder="0" width="300" height="315"></iframe>
+                    </div>
+                </ion-item>
             </div>
         </div>
         <div class="item card-item">
@@ -79,19 +91,7 @@
                 <ion-checkbox ng-model="filter.blue1">Rain Check</ion-checkbox>
             </ion-list>
         </div>
-        <div class="card">
-            <div class="item item-text-wrap">
-                <strong>Feifei Wang</strong> Shared a video, Join me for Yoga ?
-            </div>
-            <ion-list>
-                <div class="card">
-                    <ion-item>
-                        <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/wyVM1evRxNw" frameborder="0" width="560" height="315"></iframe>
-                        </div>
-                    </ion-item>
-            </ion-list>
-        </div>
+
 
 
         <div class="item card-item">
