--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -116,7 +116,7 @@
 
                 <div class="item item-divider">
                     <h3>Recommended App</h3>
-                    <h4>Apple Watch</h4>
+                    <h4>Endmondo</h4>
                 </div>
 
             </div>
