--- a/demo/www/templates/login.html
+++ b/demo/www/templates/login.html
@@ -4,6 +4,7 @@
             <div class="content">
                 <!--<div class="app-icon"></div>-->
                 <h2 style="color: white" >Path to Wellness</h2>
+                <h3>Start the journey today to a healthier you.</h3>
             </div>
         </div>
         <div class="list">
