--- a/demo/www/templates/redeem.html
+++ b/demo/www/templates/redeem.html
@@ -1,16 +1,26 @@
 <ion-view view-title="Redeem" style="background-image: url('img/prototype/sap_app_bg.jpg');background-size:cover;" >
     <ion-content ng-class="{expanded:isExpanded}" class="animate-fade-slide-in" >
+        <div class="hero" style="background-image: url('img/prototype/sap_app_bg.jpg');">
+            <div class="content">
+                <div class="avatar" style="background-image: url('img/eric.jpg');"></div>
+                <h3><a class="light">Eric Stark</a></h3>
+                <p>S.Crop.,model employee</p>
+                <h4 style="color: #0074d6"> Point 780 |  Program 12 </h4>
+            </div>
+        </div>
+
+
         <div class="tabs tabs-balanced tabs-icon-top static" >
-            <a ui-sref="app.profile" class="tab-item">
+            <a class="tab-item">
                 <i class="icon ion-cash"></i> Cash
             </a>
-            <a ui-sref="app.profile" class="tab-item">
+            <a class="tab-item active" >
                 <i class="icon ion-ios-box-outline"></i> Gift
             </a>
-            <a ui-sref="app.profile" class="tab-item">
+            <a  class="tab-item">
                 <i class="icon ion-ios-glasses-outline"></i> Research
             </a>
-            <a ui-sref="app.profile" class="tab-item">
+            <a  class="tab-item">
                 <i class="icon ion-ios-heart-outline"></i> Charity
             </a>
 
