--- a/demo/www/templates/welcomeback.html
+++ b/demo/www/templates/welcomeback.html
@@ -42,7 +42,7 @@
 
                 <div class="col " style="position: relative; top: 100px;">
 
-                    <button ui-sref="app.feel" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
+                    <button ui-sref="app.privacy" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
                 </div>
             </div>
