--- a/demo/www/templates/menu.html
+++ b/demo/www/templates/menu.html
@@ -19,7 +19,7 @@
         <ion-content class="stable-bg has-expanded-header">
             <ion-list>
                 <ion-item nav-clear menu-close ui-sref="app.activity">
-                    Activity
+                    Groups
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.profile">
                     Profile
