--- a/demo/www/templates/activity.html
+++ b/demo/www/templates/activity.html
@@ -14,7 +14,7 @@
         <!--</div>-->
         <div class="card">
             <div class="item item-text-wrap">
-                <strong>Feifei Wang</strong> Shared a video, Join me for Yoga ?
+                <strong>Feifei Wang</strong> Shared a video, Try this great stretching routine before and after a long walk should help.
             </div>
             <div class="card">
                 <ion-item>
@@ -28,7 +28,7 @@
             <div ui-sref="app.gallery" class="card stable-bg ink ink-dark">
                 <div class="item item-avatar item-text-wrap">
                     <span class="avatar" style="background-image: url('img/yixiaosong.png');"></span>
-                    <strong>Yixiao</strong> knows nothing.
+                    <strong>Yixiao</strong> I could barely move my legs today after walking for 3 hours yeasterday.
                     <div class="card-footer text-right">
                         <i class="icon ion-chatbubbles positive"></i> 6
                         <i class="icon ion-heart assertive"></i> 23
