--- a/demo/www/templates/feel.html
+++ b/demo/www/templates/feel.html
@@ -9,19 +9,19 @@
                 <div class="eag-home-container">
                     <div class ="row">
                         <div class="col">
-                            <button on-touch="onTouch()" class="button button-stable button-clear eag-home-button"><img src="img/emojis/super_energetic.png" ></button><p class="eag-home-label"></p></div>
+                            <button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/super_energetic.png" ></button><p class="eag-home-label"></p></div>
 
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/relaxed.png" ></button><p class="eag-home-label"></p></div>
-
-                    </div>
-                    <div class ="row">
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_tired.png" ></button><p class="eag-home-label"></p></div>
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/exhausted.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/relaxed.png" ></button><p class="eag-home-label"></p></div>
 
                     </div>
                     <div class ="row">
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_nervous.png" ></button><p class="eag-home-label"></p></div>
-                        <div class="col"><button class="button button-stable button-clear eag-home-button"><img src="img/emojis/stressed_out.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_tired.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/exhausted.png" ></button><p class="eag-home-label"></p></div>
+
+                    </div>
+                    <div class ="row">
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/little_nervous.png" ></button><p class="eag-home-label"></p></div>
+                        <div class="col"><button ui-sref="app.profile" class="button button-stable button-clear eag-home-button"><img src="img/emojis/stressed_out.png" ></button><p class="eag-home-label"></p></div>
 
                     </div>
                     <div class = "row text-center">
@@ -29,7 +29,7 @@
 
                         <div class="col " style="position:relative;top: 40px;;">
 
-                            <button ui-sref="app.profile" class="button button-calm button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
+                            <button ui-sref="app.profile" class="button button-balanced button-raised icon-right ion-ios-color-wand" data-ink-color="#CD3385" data-ink-opacity=".8">Skip</button>
 
                         </div>
                     </div>
