--- a/demo/www/templates/friends.html
+++ b/demo/www/templates/friends.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Friends">
+<ion-view view-title="Leader board">
     <ion-content ng-class="{expanded:isExpanded}" style="background-image: url('img/prototype/sap_app_bg.jpg');"
         <div class="content has-header">
             <div class="list animate-fade-slide-in-right">
