--- a/demo/www/templates/gallery.html
+++ b/demo/www/templates/gallery.html
@@ -4,15 +4,16 @@
             <div class="list">
                 <div ng-controller="ModalCtrl" class="card card-gallery item item-text-wrap">
                     <div class="ink dark-bg">
-                        <img class="full-image" src="img/redeem/bootcamp.jpg">
+                        <img class="full-image" src="img/redeem/walkyourway.jpg">
                         <!--<h2><strong>Join Bootcamp right now</strong> </h2>-->
 
                     </div>
                     <div class = "row">
-                         <h2 style="background-color:white"  >Because of your high risk of<strong> paternity level </strong> submitted a week ago
-                            <div class="item tabs  ">
+                             <h2 style="background-color:white"  >Because of your high risk of<strong> obesity </strong> and low activity level
+
+                                 <div class="item tabs  ">
                                 <a class="tab-item balanced-bg  "  ng-click="modal.show()">
-                                  <i class="ico"> Join</i>
+                                  <i class="ico"> Explore</i>
                                 </a>
                               </div>
                          </h2>
@@ -22,52 +23,53 @@
                 <div ui-sref="app.profile" class="card card-gallery item item-text-wrap">
                     <div class="ink dark-bg">
                         <!--<h2><strong>Join walk Your Way to Health</strong></h2>-->
-                        <img class="full-image" src="img/redeem/walkyourway.jpg">
+
+                        <img class="full-image" src="img/redeem/bootcamp.jpg">
                     </div>
                     <div class = "row">
-                        <h2 style="background-color:white"  >Because of your high risk of<strong> obesity </strong> and low activity level
+                        <h2 style="background-color:white"  >Because of your high risk of<strong> paternity level </strong> submitted a week ago
                             <div class="item tabs  ">
                                 <a class="tab-item balanced-bg  "  ng-click="modal.show()">
-                                    <i class="ico"> Join</i>
+                                    <i class="ico"> Explore</i>
                                 </a>
                             </div>
                         </h2>
                     </div>
                 </div>
-            <div ui-sref="app.profile" class="card card-gallery item item-text-wrap">
-                <div class="ink dark-bg">
-                    <img class="full-image" src="img/redeem/airzoom.jpg">
-                    <h2>Redeem Air Zoom Running Shoes?
-                        <strike>120 Point</strike> 100 Point!</h2>
-                </div>
-                <div class="item tabs tabs-secondary tabs-icon-left">
-                    <a class="tab-item stable-bg assertive">
-                        <i class="icon ion-heart"></i>
-                        4
-                    </a>
-                    <a class="tab-item light-bg positive-900">
-                        <i class="icon ion-chatbubbles"></i>
-                        2
-                    </a>
-                </div>
-            </div>
-            <div ui-sref="app.profile" class="card card-gallery item item-text-wrap">
-                <div class="ink dark-bg">
+            <!--<div ui-sref="app.profile" class="card card-gallery item item-text-wrap">-->
+                <!--<div class="ink dark-bg">-->
+                    <!--<img class="full-image" src="img/redeem/airzoom.jpg">-->
+                    <!--<h2>Redeem Air Zoom Running Shoes?-->
+                        <!--<strike>120 Point</strike> 100 Point!</h2>-->
+                <!--</div>-->
+                <!--<div class="item tabs tabs-secondary tabs-icon-left">-->
+                    <!--<a class="tab-item stable-bg assertive">-->
+                        <!--<i class="icon ion-heart"></i>-->
+                        <!--4-->
+                    <!--</a>-->
+                    <!--<a class="tab-item light-bg positive-900">-->
+                        <!--<i class="icon ion-chatbubbles"></i>-->
+                        <!--2-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div ui-sref="app.profile" class="card card-gallery item item-text-wrap">-->
+                <!--<div class="ink dark-bg">-->
 
-                    <img class="full-image" src="img/redeem/yogamat.jpg">
-                    <h2>Redeem Yoga Mate? <strike>60 Point</strike> <strong>  40 Point!</strong></h2>
-                </div>
-                <div class="item tabs tabs-secondary tabs-icon-left">
-                    <a class="tab-item stable-bg assertive">
-                        <i class="icon ion-heart"></i>
-                        6
-                    </a>
-                    <a class="tab-item stable-bg positive-900">
-                        <i class="icon ion-chatbubbles"></i>
-                        1
-                    </a>
-                </div>
-            </div>
+                    <!--<img class="full-image" src="img/redeem/yogamat.jpg">-->
+                    <!--<h2>Redeem Yoga Mate? <strike>60 Point</strike> <strong>  40 Point!</strong></h2>-->
+                <!--</div>-->
+                <!--<div class="item tabs tabs-secondary tabs-icon-left">-->
+                    <!--<a class="tab-item stable-bg assertive">-->
+                        <!--<i class="icon ion-heart"></i>-->
+                        <!--6-->
+                    <!--</a>-->
+                    <!--<a class="tab-item stable-bg positive-900">-->
+                        <!--<i class="icon ion-chatbubbles"></i>-->
+                        <!--1-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
         </div>
     </ion-content>
@@ -82,7 +84,7 @@
 
         <ion-content class="padding">
             <div class="ink dark-bg">
-                <img class="full-image" src="img/redeem/bootcamp.jpg">
+                <img class="full-image" src="img/redeem/walkyourway.jpg">
                 <!--<h2><strong>Join Bootcamp right now</strong> </h2>-->
             </div>
             <div class="card">
