--- a/demo/www/templates/menu.html
+++ b/demo/www/templates/menu.html
@@ -25,7 +25,7 @@
                     Profile
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.friends">
-                    Friends
+                    Leader board
                 </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.gallery">
                     Explore
