--- a/demo/www/templates/profile.html
+++ b/demo/www/templates/profile.html
@@ -1,31 +1,6 @@
 <ion-view view-title="Home">
     <ion-content ng-class="{expanded:$scope.isExpanded}" style="background-image: url('img/prototype/sap_app_bg.jpg');">
 
-        <!--<div class="hero slide-up" style="background-image: url('img/prototype/sap_app_bg.jpg');">-->
-            <!--<div class="content">-->
-                <!--<div class="avatar" style="background-image: url('img/eric.jpg');"></div>-->
-                <!--<h3><a class="light">Eric Stark</a></h3>-->
-                <!--<p>S.Crop.,model employee</p>-->
-                <!--<h4 style="color: #0074d6"> Point 780 |  Program 12 </h4>-->
-            <!--</div>-->
-        <!--</div>-->
-
-        <!--<div class="tabs-striped tabs-top tabs-background-positive tabs-color-light">-->
-            <!--<div class="tabs">-->
-                <!--<a class="tab-item active" href="#">-->
-                    <!--<i class="icon ion-home"></i>-->
-                    <!--Test-->
-                <!--</a>-->
-                <!--<a class="tab-item" href="#">-->
-                    <!--<i class="icon ion-star"></i>-->
-                    <!--Favorites-->
-                <!--</a>-->
-                <!--<a class="tab-item" href="#">-->
-                    <!--<i class="icon ion-gear-a"></i>-->
-                    <!--Settings-->
-                <!--</a>-->
-            <!--</div>-->
-        <!--</div>-->
         <div class="tabs tabs-positive tabs-icon-top static" >
             <a class="tab-item " ui-sref="app.track" class="tab-item">
                 <i class="icon ion-arrow-graph-up-right"></i> Track
@@ -196,24 +171,9 @@
 
                 <div class="button-bar">
                     <a class="button  button-dark" ng-click="modal.hide()">Preview</a>
-                    <a class="button  button-positive" ng-click="modal.hide()">Next</a>
+                    <a class="button  button-balanced" ng-click="modal.hide()">Next</a>
 
                 </div>
-                <!--<div class="list">-->
-                <!--<label class="item item-input">-->
-                <!--<span class="input-label">First Name</span>-->
-                <!--<input ng-model="newUser.firstName" type="text">-->
-                <!--</label>-->
-                <!--<label class="item item-input">-->
-                <!--<span class="input-label">Last Name</span>-->
-                <!--<input ng-model="newUser.lastName" type="text">-->
-                <!--</label>-->
-                <!--<label class="item item-input">-->
-                <!--<span class="input-label">Email</span>-->
-                <!--<input ng-model="newUser.email" type="text">-->
-                <!--</label>-->
-                <!--<button class="button button-full button-positive" ng-click="createContact(newUser)">Create</button>-->
-                <!--</div>-->
             </ion-content>
         </ion-modal-view>
 </ion-view>
