--- a/demo/www/templates/menu.html
+++ b/demo/www/templates/menu.html
@@ -18,12 +18,13 @@
         </ion-header-bar>
         <ion-content class="stable-bg has-expanded-header">
             <ion-list>
+                <ion-item nav-clear menu-close ui-sref="app.profile">
+                    Home
+                </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.activity">
                     Groups
                 </ion-item>
-                <ion-item nav-clear menu-close ui-sref="app.profile">
-                    Profile
-                </ion-item>
+
                 <ion-item nav-clear menu-close ui-sref="app.friends">
                     Leader board
                 </ion-item>
